Pull request #202: [CHAT-746] - sending attachment with fileName
Merge in MML/infobip-mobile-messaging-android from CHAT-746-attachment-sending to master

Squashed commit of the following:

commit 5c76386017582d0ef12638854ac0dccf932a62d6
Author: Dmitry Ilin <Dmitry.Ilin@infobip.com>
Date:   Tue Aug 11 13:35:08 2020 +0300

    [CHAT-746] - sending attachment with fileName

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -31,10 +31,11 @@
             liveChat(SEND, message);
         }
 
-        window.handleMessageWithAttachmentSend = function(message, attachment) {
+        window.handleMessageWithAttachmentSend = function(message, attachment, fileName) {
             liveChat(SEND, {
                 'message': message,
-                'attachment': attachment
+                'attachment': attachment,
+                'fileName': fileName,
             });
         }
 
