Pull request #224: CHAT-1096/in app sneak peek
Merge in MML/infobip-mobile-messaging-android from CHAT-1096/in-app-sneak-peek to master

Squashed commit of the following:

commit 5777242379f0500f10ceab2954d32976b4280171
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Tue Jan 26 14:51:31 2021 +0300

    [CHAT-1096] Review fixes part 2

commit d5fc35b85e924d3b2dfb3fb1daf964532b79d4dc
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Tue Jan 26 14:30:01 2021 +0300

    [CHAT-1096] Review fixes

commit f4f164495424c0b5ed1166305453f3bc61c4d272
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Mon Jan 25 17:44:25 2021 +0300

    [CHAT-1096] Added basic type for sending message with attachments

commit 2ea84b6d21e7ae57e6544dc733d3e08a2c43aa88
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Mon Jan 25 17:34:47 2021 +0300

    [CHAT-1096] Decrease user input checker delay

commit 98550677ee15f580535a9a75286ec7883739971a
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Mon Jan 25 17:11:38 2021 +0300

    [CHAT-1096] Fix for input finish checker

commit d3c5d122582766a99688625df68c6ea7da21a5d0
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Fri Jan 22 20:38:57 2021 +0300

    [CHAT-1096] Added input finish checker

commit 28c6ffd9a90ea498ef0a323ada01acb07a75de3e
Author: Artem Kozhevnikov <artem.kozhevnikov@infobip.com>
Date:   Fri Jan 22 16:38:28 2021 +0300

    [CHAT-1096] Init of sneak peek realisation

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -1,5 +1,6 @@
 <html lang="En">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
           (function(I,n,f,o,b,i,p){
             I[b]=I[b]||function(){(I[b].q=I[b].q||[]).push(arguments)};
@@ -36,6 +37,14 @@
                 'message': message,
                 'attachment': attachment,
                 'fileName': fileName,
+                'type': 'BASIC'
+            });
+        }
+
+        window.handleMessageDraftSend = function(draft) {
+            liveChat(SEND, {
+                'message': draft,
+                'type': 'DRAFT'
             });
         }
 
