--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-attachment-preview.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-attachment-preview.html
@@ -1,5 +1,6 @@
 <html lang="En">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         body {
             margin: 0;
