Pull request #256: LCZ-223 - remove arrow function
Merge in MML/infobip-mobile-messaging-android from LCZ-223-remove-arrow-function to master

Squashed commit of the following:

commit ba50d22fbcaeab4438cd5d1e06585fffafd890e8
Author: Dmitry Ilin <Dmitry.Ilin@infobip.com>
Date:   Fri Nov 26 14:40:30 2021 +0300

    LCZ-223 - remove arrow function

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -69,7 +69,9 @@
 		// If all is OK -> initialize widget, enable native controls and show widget
 		function init() {
 		    liveChat(INIT);
-			liveChat(SHOW, null, () => onShowCallback());
+			liveChat(SHOW, null, function() {
+			    onShowCallback();
+			});
 		}
 
 		function getQueryParameter(name){
