Pull request #272: MCA-2017 - change livechat widget language, add language menu to demo
Merge in MML/infobip-mobile-messaging-android from feature/MCA-1975-change_chat_language to master

Squashed commit of the following:

commit 6efb12a2b1566fa4070536f00d13a462251df334
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 16:08:29 2022 +0200

    MCA-2017 - expose propertyHelper.saveString, code clean up

commit 5909f77f5e1fdc36ec9b499f8a83fb6890549982
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 15:09:59 2022 +0200

    MCA-2017 - apply installation lang to native components

commit bdd7c020b83d5dbcd51cc2d918bbb82767387cc3
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Tue Jun 14 11:57:15 2022 +0200

    MCA-2017 - translations, chat fragment and attachment activity localisation

commit b70f814391fa8e4bd08d0b2c5b4e6b386c3426a4
Author: Jakub Miško <jakub.misko@infobip.com>
Date:   Wed Jun 8 14:41:20 2022 +0200

    MCA-2017 - change livechat widget language, add language menu to demo

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -27,6 +27,7 @@
         const INIT = 'init';
         const SHOW = 'show';
         const SEND = 'send';
+        const SET_LANGUAGE = 'set_language';
 
         window.handleMessageSend = function(message) {
             liveChat(SEND, message);
@@ -46,6 +47,10 @@
                 'message': draft,
                 'type': 'DRAFT'
             });
+        }
+
+        function setLanguage(language) {
+            liveChat(SET_LANGUAGE, language);
         }
 
         // Override widget config
