Pull request #282: Feature/MCA-2042 send contextual data
Merge in MML/infobip-mobile-messaging-android from feature/MCA-2042_send_contextual_data to master

Squashed commit of the following:

commit f4848088c92a37e8043c214626b73bebf81471c2
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Sep 13 13:57:00 2022 +0200

    MCA-2042: removed test comment

commit 19b3b3d81ea7cd54d5d358ca326bb5fd4c37f316
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Sep 13 12:36:00 2022 +0200

    MCA-2042: review fixes 2

commit 0d547c964b72a783c36273be668973a087c7b29e
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Sep 12 15:18:19 2022 +0200

    MCA-2042: review fixes

commit 0da60d0a6a1f5db6e8835cf4dd42b4fe98aaedda
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Sep 12 14:24:13 2022 +0200

    MCA-2042: wip

commit a624781e0be4e4b80482cd51366ffda1edf11965
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Sep 9 11:45:48 2022 +0200

    MCA-2042: rollback development changes

commit 8b294878bd2f72ab4472fc4683772cc9fabe31d1
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Fri Sep 9 11:28:43 2022 +0200

    MCA-2042: sync strategy parameter from enum to boolean with iOS

commit 162aeec9a3ce4367339c46a45ff09a2805db2033
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Sep 8 16:17:33 2022 +0200

    MCA-2042: remove testing line of code

commit df61b38d7dd377b49d6918be05d094d21a6226e9
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Thu Sep 8 16:17:11 2022 +0200

    MCA-2042: send contextual metadata immediately, no waiting for widget to load

commit 67d97d06a0cb65d0f8821b00cdb9335d31ddcd8a
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Sep 7 13:11:40 2022 +0200

    MCA-2042: MCA-2042 impl done

commit 479ade1960616c0402d131ad3d0943f636322385
Merge: 35ecb29d 8bd3653a
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Sep 7 10:02:36 2022 +0200

    MCA-2042: Merge branch 'master' into feature/MCA-2042_send_

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -28,6 +28,7 @@
         const SHOW = 'show';
         const SEND = 'send';
         const SET_LANGUAGE = 'set_language';
+        const SEND_CONTEXTUAL_DATA = 'send_contextual_data'
 
         window.handleMessageSend = function(message) {
             liveChat(SEND, message);
@@ -51,6 +52,13 @@
 
         function setLanguage(language) {
             liveChat(SET_LANGUAGE, language);
+        }
+
+        function sendContextualData(data, strategy) {
+             liveChat(SEND_CONTEXTUAL_DATA, {
+                   metadata: data,
+                   multiThreadStrategy: strategy
+             });
         }
 
         // Override widget config
