--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -31,6 +31,16 @@
         const SEND_CONTEXTUAL_DATA = 'send_contextual_data'
         const SHOW_THREAD_LIST = 'show_thread_list'
 
+        const errorCallback = function(error, result) {
+            if (error) {
+                if ((typeof error === 'object' || Array.isArray(error)) && error !== null) {
+                    window.InAppChatMobile.onError(JSON.stringify(error));
+                } else {
+                    window.InAppChatMobile.onError(error);
+                }
+            }
+        };
+
         window.handleMessageSend = function(message) {
             liveChat(SEND, message);
         }
@@ -52,7 +62,7 @@
         }
 
         window.showThreadList = function() {
-            liveChat(SHOW_THREAD_LIST);
+            liveChat(SHOW_THREAD_LIST, null, errorCallback);
         }
 
         window.addEventListener('message', (event) => {
@@ -62,14 +72,18 @@
         })
 
         function setLanguage(language) {
-            liveChat(SET_LANGUAGE, language);
+            liveChat(SET_LANGUAGE, language, errorCallback);
         }
 
         function sendContextualData(data, strategy) {
-             liveChat(SEND_CONTEXTUAL_DATA, {
+             liveChat(
+                SEND_CONTEXTUAL_DATA,
+                {
                    metadata: data,
                    multiThreadStrategy: strategy
-             });
+                },
+                errorCallback
+		     );
         }
 
         // Override widget config
@@ -84,7 +98,7 @@
         // Try identify user by pushRegId
 		liveChat(IDENTIFY, {'pushRegistrationId' : getQueryParameter('pushRegId')}, function(error, result) {
 		    if (error) {
-		        window.InAppChatMobile.onError(error);
+		        errorCallback(error);
 			} else {
 				init();
 			}
@@ -106,7 +120,7 @@
 
         function onShowCallback(error, result) {
             if (error) {
-                window.InAppChatMobile.onError(error);
+            	errorCallback(error);
             } else {
                 window.InAppChatMobile.setControlsEnabled(true);
             }
