Pull request #401: MCA-3414 use new widget API to stop websocket connection and enable PNs when in background
Merge in MML/infobip-mobile-messaging-android from mtokar-MCA-3414_disconnected_with_widget_api to master

Squashed commit of the following:

commit 294e5a1fa92f1ccfc642a19548491526e19595e1
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Tue Nov 21 13:48:16 2023 +0100

    introduce onChatReconnectedEvent, various review fixes

commit 658245cb084878bf9e63b3b8f1a32f9433446d9d
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Mon Nov 20 08:53:51 2023 +0100

    eventListener on stopConnection

commit 19b6a3590fb29f76dd5145640f30629d2ada8219
Author: Matuš Tokar <Matus.Tokar@infobip.com>
Date:   Wed Nov 15 15:58:25 2023 +0100

    use new widget API to stop websocket connection and enable PNs when in background

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -28,8 +28,10 @@
         const SHOW = 'show';
         const SEND = 'send';
         const SET_LANGUAGE = 'set_language';
-        const SEND_CONTEXTUAL_DATA = 'send_contextual_data'
-        const SHOW_THREAD_LIST = 'show_thread_list'
+        const SEND_CONTEXTUAL_DATA = 'send_contextual_data';
+        const SHOW_THREAD_LIST = 'show_thread_list';
+        const MOBILE_CHAT_PAUSE = 'mobile_chat_pause';
+        const MOBILE_CHAT_RESUME = 'mobile_chat_resume';
 
         const errorCallback = function(error, result) {
             if (error) {
@@ -84,6 +86,14 @@
                 },
                 errorCallback
 		     );
+        }
+
+        window.mobileChatPause = function() {
+            liveChat(MOBILE_CHAT_PAUSE);
+        }
+
+        window.mobileChatResume = function() {
+            liveChat(MOBILE_CHAT_RESUME);
         }
 
         // Override widget config
