--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-attachment-preview.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-attachment-preview.html
@@ -19,43 +19,27 @@
             height: 90vh;
         }
 
-        .button-wrapper {
-            width: 35px;
-            height: 35px;
-        }
-
         img, video {
             max-width: 100%;
             max-height: 100%;
-        }
-
-        .footer {
-            display: flex;
-            flex-direction: row-reverse;
-            justify-content: end;
-            padding: 5% 5% 0 5%;
         }
     </style>
 </head>
 <body>
 <div id="ib-container">
     <div id="ib-attachment">
-        <img src="./cat-height.png" alt="">
-    </div>
-    <div class="footer">
-        <div class="button-wrapper">
-            <a id="download-image" href="">
-                <img src="./download-button.png"/>
-            </a>
-        </div>
+        <a id="download-image" href=""></a>
     </div>
 </div>
 <script>
         const url = getQueryParameter('attachmentUrl');
         const type = getQueryParameter('attachmentType');
-        const caption = getQueryParameter('attachmentCaption');
 
         document.getElementById('download-image').href = url;
+
+        window.downloadAttachment = function() {
+            document.getElementById('download-image').click();
+        };
 
         (function() {
             const attachmentContainer = document.getElementById('ib-attachment');
