Pull request #427: Jdzubak MCA-3664 set widget theme
Merge in MML/infobip-mobile-messaging-android from jdzubak-MCA-3664-set-widget-theme to master

Squashed commit of the following:

commit 0a9443fc9a6482371fbc7047d0152ca8b6fc86fb
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Mar 19 13:35:16 2024 +0100

    MCA-3664 Review points

commit ebb584afc394361a75d2d28b1aa0c18cff8a23c3
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Tue Mar 19 13:02:06 2024 +0100

    MCA-3787 WidgetTheme applied once chat is loaded, WidgetInfo contains widgetThemes

commit 0f2fe96744483fc13df8bdf9b7e6359c9bb7bc1d
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Mon Mar 18 10:19:42 2024 +0100

    MCA-3664 Styles internal variable removed

commit a5da35ee7f41ed1a309a9a49773f341e288c6708
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Mon Mar 18 09:55:25 2024 +0100

    MCA-3664 Fixed InAppChatActivityResultDelegate for Flutter plugin

commit 4cc2f258346e05a1256086b9ec96b719b170d09b
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Fri Mar 15 13:07:00 2024 +0100

    MCA-3664 Widget API improved

commit 99382cfa8f302fe89c1df79d5e5277c369cd891e
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 17:11:11 2024 +0100

    MCA-3664 removed new lines

commit 3b712a6508a3346788c0ca4d0899598349c9175c
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 13:48:33 2024 +0100

    MCA-3664 removed language from WidgetInfo

commit ee5e7cb659cd22545c715fd363e1c7b31a9ba49a
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 13:35:42 2024 +0100

    MCA-3664 callAvailable replaced with callsEnabled

commit 17e472000185959be1461ee8c149e56e3e11d4fa
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 11:34:39 2024 +0100

    MCA-3664 setDarkMode() deprecated

commit dfe19cbd1f45164250e53b63b7e8f93a26916b4d
Author: Jakub Dzubak <jakub.dzubak@infobip.com>
Date:   Thu Mar 14 10:42:50 2024 +0100

    MCA-3664 In

--- a/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
+++ b/infobip-mobile-messaging-android-chat-sdk/src/main/assets/inappchat-widget.html
@@ -1,6 +1,10 @@
 <html lang="En">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta
+            name="viewport"
+            charset="UTF-8"
+            content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    >
     <script>
           (function(I,n,f,o,b,i,p){
             I[b]=I[b]||function(){(I[b].q=I[b].q||[]).push(arguments)};
@@ -21,83 +25,8 @@
 <body>
     <div id="ib-widget-container"></div>
     <script>
-        // Api call naming section
-        const CONFIG = 'config';
-        const IDENTIFY = 'identify';
-        const INIT = 'init';
-        const SHOW = 'show';
-        const SEND = 'send';
-        const SET_LANGUAGE = 'set_language';
-        const SEND_CONTEXTUAL_DATA = 'send_contextual_data';
-        const SHOW_THREAD_LIST = 'show_thread_list';
-        const MOBILE_CHAT_PAUSE = 'mobile_chat_pause';
-        const MOBILE_CHAT_RESUME = 'mobile_chat_resume';
-
-        const errorCallback = function(error, result) {
-            if (error) {
-                if ((typeof error === 'object' || Array.isArray(error)) && error !== null) {
-                    window.InAppChatMobile.onError(JSON.stringify(error));
-                } else {
-                    window.InAppChatMobile.onError(error);
-                }
-            }
-        };
-
-        window.handleMessageSend = function(message) {
-            liveChat(SEND, message);
-        }
-
-        window.handleMessageWithAttachmentSend = function(message, attachment, fileName) {
-            liveChat(SEND, {
-                'message': message,
-                'attachment': attachment,
-                'fileName': fileName,
-                'type': 'BASIC'
-            });
-        }
-
-        window.handleMessageDraftSend = function(draft) {
-            liveChat(SEND, {
-                'message': draft,
-                'type': 'DRAFT'
-            });
-        }
-
-        window.showThreadList = function() {
-            liveChat(SHOW_THREAD_LIST, null, errorCallback);
-        }
-
-        window.addEventListener('message', (event) => {
-            if(event.data.destination === 'viewChange') {
-                window.InAppChatMobile.onViewChanged(event.data.view);
-            }
-        })
-
-        window.setLanguage = function(language) {
-            liveChat(SET_LANGUAGE, language, errorCallback);
-        }
-
-        window.sendContextualData = function(data, strategy) {
-             liveChat(
-                SEND_CONTEXTUAL_DATA,
-                {
-                   metadata: data,
-                   multiThreadStrategy: strategy
-                },
-                errorCallback
-		     );
-        }
-
-        window.mobileChatPause = function() {
-            liveChat(MOBILE_CHAT_PAUSE);
-        }
-
-        window.mobileChatResume = function() {
-            liveChat(MOBILE_CHAT_RESUME);
-        }
-
         // Override widget config
-        liveChat(CONFIG, {
+        liveChat('config', {
             widgetId: getQueryParameter('widgetId'),
             container: document.getElementById('ib-widget-container'),
             showHeader: false,
@@ -110,10 +39,10 @@
             'pushRegistrationId' : getQueryParameter('pushRegId'),
 		};
         const jwt = getQueryParameter('jwt');
-		if(jwt != null){
+		if (jwt != null){
             inputParams.jwt = jwt;
 		}
-		liveChat(IDENTIFY, inputParams, function(error, result) {
+		liveChat('identify', inputParams, function(error, result) {
 		    if (error) {
 		        errorCallback(error);
 			} else {
@@ -123,24 +52,90 @@
 
 		// If all is OK -> initialize widget, enable native controls and show widget
 		function init() {
-		    liveChat(INIT);
-			liveChat(SHOW, null, function() {
-			    onShowCallback();
-			});
+		    liveChat('init');
+			liveChat('show', null, onShowCallback);
 		}
-
-		function getQueryParameter(name){
-           if(name=(new RegExp('[?&]'+encodeURIComponent(name)+'=([^&]*)')).exec(location.search)) {
-               return decodeURIComponent(name[1]);
-           }
-        }
 
         function onShowCallback(error, result) {
             if (error) {
             	errorCallback(error);
             } else {
-                window.InAppChatMobile.setControlsEnabled(true);
+                InAppChatMobile.setControlsEnabled(true);
             }
+        }
+
+        function errorCallback(error, result) {
+            if (error) {
+                if (error !== null && (typeof error === 'object' || Array.isArray(error))) {
+                    InAppChatMobile.onError(JSON.stringify(error));
+                } else {
+                    InAppChatMobile.onError(error);
+                }
+            }
+        };
+
+        window.addEventListener('message', (event) => {
+            if (event.data.destination === 'viewChange') {
+                InAppChatMobile.onViewChanged(event.data.view);
+            }
+        })
+
+		//Widget API
+        function sendMessage(message) {
+            liveChat('send', message);
+        }
+
+        function sendMessageWithAttachment(message, attachment, fileName) {
+            liveChat('send', {
+                'message': message,
+                'attachment': attachment,
+                'fileName': fileName,
+                'type': 'BASIC'
+            });
+        }
+
+        function sendDraft(draft) {
+            liveChat('send', {
+                'message': draft,
+                'type': 'DRAFT'
+            });
+        }
+
+        function showThreadList() {
+            liveChat('show_thread_list', null, errorCallback);
+        }
+
+        function setLanguage(language) {
+            liveChat('set_language', language, errorCallback);
+        }
+
+        function sendContextualData(data, strategy) {
+             liveChat(
+                'send_contextual_data',
+                {
+                   metadata: data,
+                   multiThreadStrategy: strategy
+                },
+                errorCallback
+		     );
+        }
+
+        function mobileChatPause() {
+            liveChat('mobile_chat_pause');
+        }
+
+        function mobileChatResume() {
+            liveChat('mobile_chat_resume');
+        }
+
+        function setTheme(theme) {
+            liveChat('set_theme', theme);
+        }
+
+		function getQueryParameter(name) {
+           if (name=(new RegExp('[?&]'+encodeURIComponent(name)+'=([^&]*)')).exec(location.search)) {
+               return decodeURIComponent(name[1]);
+           }
         }
     </script>
 </body>
